--- a/html/home-page.html
+++ b/html/home-page.html
@@ -16,24 +16,45 @@
             <a href="mailto:info@tgif.net"><u>info@tgif.net</u></a>
         </div>
     </div>
-      <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-dark">
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a class="nav-link text-light font-weight-bold" href="home-page.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item dropdown active ">
-                <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Congress 113
-                </a>
-                <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item text-light font-weight-bold" href="senate-page.html">Senate</a>
-                  <a class="dropdown-item text-light font-weight-bold" href="house-page.html">House</a>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </nav>
+    <nav class="navbar navbar-expand-sm sticky-top navbar-light bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link text-light font-weight-bold" href="home-page.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Congress 113
+            </a>
+            <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item text-light font-weight-bold" href="senate-page.html">Senate</a>
+              <a class="dropdown-item text-light font-weight-bold" href="house-page.html">House</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Attendance
+            </a>
+            <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item text-light font-weight-bold" href="senate-attendance.html">Senate</a>
+              <a class="dropdown-item text-light font-weight-bold" href="house-attendance.html">House</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Party Loyalty
+            </a>
+            <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item text-light font-weight-bold" href="senate-party-loyalty.html">Senate</a>
+              <a class="dropdown-item text-light font-weight-bold" href="house-party-loyalty.html">House</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
         <header>            
         
