--- a/html/house-attendance.html
+++ b/html/house-attendance.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
-<html lang="en">
     <body>
         <div class="d-flex justify-content-between align-items-center mx-5" style="height: 130px;">
             <img src="../images/TGIF_Logo_ok.png" alt="Logo-TGIF" style="height: 80px;">
@@ -36,7 +35,7 @@
                     </div>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Attendance
                     </a>
                     <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -45,7 +44,7 @@
                     </div>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Party Loyalty
                     </a>
                     <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
