--- a/html/house-party-loyalty.html
+++ b/html/house-party-loyalty.html
@@ -35,7 +35,7 @@
                     </div>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Attendance
                     </a>
                     <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -44,7 +44,7 @@
                     </div>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Party Loyalty
                     </a>
                     <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
