--- a/html/senate-page.html
+++ b/html/senate-page.html
@@ -58,7 +58,7 @@
 
         <div class="mt-5 mx-4">
             <div class="mb-5">
-                <h2>Senators</h2>
+                <h2 id="test">Senators</h2>
                 <p style="max-width: 800px; text-indent: 30px;">First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S. Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the House.</p>
             </div>
             <div>
@@ -90,16 +90,17 @@
                             <th>% Votes w/ Party</th>
                         </tr>
                     </thead>
-                    <tbody id="senate-data" class="text-center">
+                    <tbody id="tableData" class="text-center">
             
                     </tbody>
                 </table>
+                <div class="spinner-border"></div>
             </div>
         </div> 
         <footer class="bg-dark" style="height: 60px;">
             <p class="text-light text-center pt-3">&copy 2016 TGIF | All Rights Reserved</p>
         </footer>
-        <script src="../js/pro-Congress-113-senate.js"></script>
+        <!--<script src="../js/pro-Congress-113-senate.js"></script>-->
         <script src="../js/command.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
