--- a/html/senate-attendance.html
+++ b/html/senate-attendance.html
@@ -24,7 +24,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link text-light font-weight-bold" href="home-page.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-light font-weight-bold" href="index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-light font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
