--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
       <div class="d-flex justify-content-between align-items-center mx-5" style="height: 130px;">
-        <img src="../images/TGIF_Logo_ok.png" alt="Logo-TGIF" style="height: 80px;">
+        <img src="./images/TGIF_Logo_ok.png" alt="Logo-TGIF" style="height: 80px;">
         <div>
             <i class="fas fa-envelope" style="font-size: 1.5rem"></i>
             <a href="mailto:info@tgif.net"><u>info@tgif.net</u></a>
@@ -81,14 +81,14 @@
             </div>
             </div>
             <div class="mx-5 mt-5 pt-5" >
-            <img src="../images/download.png" alt="search image">
+            <img src="./images/download.png" alt="search image">
             </div>
       </div> 
       <footer class="bg-dark" style="height: 60px;">
         <p class="text-light text-center pt-3">&copy 2016 TGIF | All Rights Reserved</p>
       </footer>
-    <script src="../js/pro-Congress-113-senate.js"></script>
-    <script src="../js/command.js"></script>
+    <script src="./js/pro-Congress-113-senate.js"></script>
+    <script src="./js/command.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>   
